fix spacing issue for the stack section

--- a/style.styl
+++ b/style.styl
@@ -223,7 +223,6 @@ body
             text-align center 
             font-size 1.3rem
             line-height 1.8
-            margin 1rem 0
 
             span.stack__webdev
                 // include a tooltip for the selected keyword(s), like in the welcome section
@@ -635,16 +634,20 @@ body
 @media screen and (min-width: 700px)
     // for large screens, display the SVG icons as orbiting around the center of the screen
     .container section#stack
-        width 700px
-        height @width
+        // display the paragraph and the div nesting svg icons in a single column layout (to align them horizontally)
+        display flex
+        flex-direction column
+        align-items center
 
         div.stack__icons
             // position relative to absolute position the svg icons 
             position relative 
-            height 100%
-            width 100%
-            // margin 0 to get the svg icons close to the connetected paragraph element
-            margin 0
+            width 700px
+            height @width
+            // the svg icons are disposed in a circular patter by also modifying the translateX value of the transform property
+            // this translation doesn't take into account the size of the icon themselves, and therefore the icons are shown in the desired pattern, but slightly offset to the right
+            // this can be fixed by translating the div which nests the icons in the opposite direction
+            transform translateX(-22.5px)
 
             svg
                 position absolute 
@@ -678,7 +681,3 @@ body
                     // rotate with an opposite value of the first instance rotates the icon in place, back to the correct inclination
                     transform rotate(360deg/12*icon) translateX(250px) rotate(-360deg/12*icon)
 
-@media screen and (min-width: 1400px) 
-    // for (very) large screen sizes, increase the font-size of the text and the width of the parent section
-    .container section.welcome
-        max-width 1000px
